<resources>
    <string name="app_name">ProjetMobile</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="manga_trending_list">Trending mangas</string>
    <string name="anime_trending_list">Trending animes</string>
    <string name="filter_by">Filter by :</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="search">SEARCH</string>
    <string name="hint_search">Name...</string>
    <string name="search_title">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
