<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/searchText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_search"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_by" />

    <Button
        android:id="@+id/searchButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintStart_toEndOf="@+id/searchText"
        app:layout_constraintTop_toTopOf="@+id/searchText" />

    <CheckBox
        android:id="@+id/anime_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anime"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/manga_check"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/manga_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/manga"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/filter_by"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>